tests/positive/basic/float_specials/input.ci
void main() {
    print(toString(isNaN(toFloat("bad"))) + "\n");
    print(toString(isFinite(1.5)) + "\n");
    print(toString(isInfinite(FLOAT_MAX * 2.0)) + "\n");
}
