tests/negative/runtime/substr_empty_positive_len/input.ci
void main() {
    print(substr("", 0, 1) + "\n");
}
